# ftr

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  ftpd.conf  ftr.conf  ftrd.conf  gftp.json  go.mod  lima.json  main.go
.github/workflows/: tests.yml
cmd/ftr/: main.go
cmd/ftrd/: main.go
internal/conf/: conf.go  conf_test.go
internal/conf/testdata/: conf1.conf  conf1_want.conf  conf2.conf  conf2_want.conf  conf3.conf
internal/logger/: log.go
internal/server/: commands.go  file.go  run_command.go  server.go  session.go  status_codes.go
src/: CMakeLists.txt  cmd.cpp  cmd.hpp  command.cpp  command.hpp  conf.cpp  conf.hpp  conf.rs  config.hpp.in  constants.hpp  daemon.cpp  daemon.hpp  exception.hpp  file_data.cpp  file_data.hpp  file_data_line.cpp  file_data_line.hpp  ftr.cpp  ftr.rs  ftrd.cpp  ftrd.hpp  log.cpp  log.hpp  log.rs  main.rs  server.cpp  server.hpp  server.rs  session.cpp  session.hpp  session.rs  string.cpp  string.hpp  util.cpp  util.hpp
testdata/: basic.conf  multiple_users.conf  no_users.conf
tests/: CMakeLists.txt  cmd_test.cpp  command_test.cpp  conf_test.cpp  server_test.php  server_test.py  string_benchmarks.cpp  string_test.cpp  util_test.cpp
tests/confs/: basic.conf  basic_users.conf  commented.conf  multiple_users.conf  no_users.conf
